# ChangeLog for sys-apps/file
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-apps/file/ChangeLog,v 1.213 2011/12/12 22:41:16 ago Exp $

  12 Dec 2011; Agostino Sarubbo <ago@gentoo.org> file-5.09.ebuild:
  Stable for AMD64, wrt bug #393291

  11 Dec 2011; Raúl Porcel <armin76@gentoo.org> file-5.09.ebuild:
  alpha/arm/ia64/m68k/s390/sh/sparc stable wrt #393291

  11 Dec 2011; Pawel Hajdan jr <phajdan.jr@gentoo.org> file-5.09.ebuild:
  x86 stable wrt bug #393291

  05 Dec 2011; Jeroen Roovers <jer@gentoo.org> file-5.09.ebuild:
  Stable for HPPA (bug #393291).

  17 Sep 2011; Mike Frysinger <vapier@gentoo.org> file-5.09.ebuild,
  -files/file-5.09-cdf-arraycount.patch:
  Upstream rebuilt tarball with the arraycount fix.

*file-5.09 (16 Sep 2011)

  16 Sep 2011; Mike Frysinger <vapier@gentoo.org> +file-5.09.ebuild,
  +files/file-5.09-cdf-arraycount.patch:
  Version bump.

  09 Aug 2011; Kacper Kowalik <xarthisius@gentoo.org> file-5.07-r3.ebuild:
  ppc/ppc64 stable wrt #377723

  07 Aug 2011; Raúl Porcel <armin76@gentoo.org> file-5.07-r3.ebuild:
  alpha/arm/ia64/m68k/s390/sh/sparc stable wrt #377723

  07 Aug 2011; Markos Chandras <hwoarang@gentoo.org> file-5.07-r3.ebuild:
  Stable on amd64 wrt bug #377723

  07 Aug 2011; Pawel Hajdan jr <phajdan.jr@gentoo.org> file-5.07-r3.ebuild:
  x86 stable wrt bug #377723

  05 Aug 2011; Jeroen Roovers <jer@gentoo.org> file-5.07-r3.ebuild:
  Stable for HPPA (bug #377723).

  04 Aug 2011; Samuli Suominen <ssuominen@gentoo.org> file-5.08.ebuild:
  Change license from as-is to BSD-2 per COPYING wrt #263551 by Justin Bronder

*file-5.08 (04 Aug 2011)

  04 Aug 2011; Samuli Suominen <ssuominen@gentoo.org> +file-5.08.ebuild:
  Version bump.

*file-5.07-r3 (08 Jul 2011)

  08 Jul 2011; Mike Frysinger <vapier@gentoo.org> +file-5.07-r3.ebuild,
  +files/file-5.07-postscript-detect.patch:
  Add fix from upstream for postscript detection #368121 by Justin Brody and
  Shannon.
