@@ -1,6 +1,11 @@
 # ChangeLog for sys-apps/file
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/file/ChangeLog,v 1.213 2011/12/12 22:41:16 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/file/ChangeLog,v 1.214 2011/12/31 06:00:52 vapier Exp $
+
+*file-5.10 (31 Dec 2011)
+
+  31 Dec 2011; Mike Frysinger <vapier@gentoo.org> +file-5.10.ebuild:
+  Version bump.
 
   12 Dec 2011; Agostino Sarubbo <ago@gentoo.org> file-5.09.ebuild:
   Stable for AMD64, wrt bug #393291
